# basic_ioc_interface

./: docker-compose.yml  readme.md
client/: package-lock.json  package.json
client/src/: App.js  WebSocketManager.js  index.js
client/src/PVComponents/: PVHistogram.js  PVLed.js  PVRawValue.js
client/src/redux/: actions.js  store.js
ioc_host_a/: ioc.py  pvs.json
ioc_host_b/: ioc.py
ioc_to_websocket/: Dockerfile  epics2web.war
react-client/: .dockerignore  .env  Dockerfile  package-lock.json  package.json
react-client/public/: index.html
react-client/src/: App.css  App.js  PVComponent.js  WebSocketManager.js  index.js
react-client/src/PVComponents/: PVBarGraph.js  PVButton.js  PVCheckbox.js  PVGraphBar.js  PVInput.js  PVLed.js  PVRaw.js  PVTable.js
react-client/src/components/: DiscardDialog.js  ExampleBarGraph.js  ExampleTable.js  Header.js  ReadyState.js  SettingsDrawer.js
react-client/src/redux/: actions.js  store.js
react-client/src/routes/: index.js
web_put/: .editorconfig  Dockerfile  put.py  setup.cfg  setup.py
web_put/src/webput/: __init__.py  app.py
xml_to_caproto/: Dockerfile  ade_bmf_BFStatus.xml  ioc.py  make_ioc.py  paf.xml
