[isort]
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = webput
line_length = 79
multi_line_output = 3
use_parentheses = True


[metadata]
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
name = webput
url = https://github.com/webepics/basic_ioc_interface
version = attr: webput.__version__

[options]
install_requires =
    caproto[complete]==0.3.2
    flask==1.0.2
package_dir=
    =src
packages = find:
python_requires = >=3.6, <3.8

[options.packages.find]
where = src

[wheel]
universal = 1
